--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^4.3.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "https": "^1.0.0",
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
